Create users/services/ added three url in swagger.yaml. Can get user by id and login. Can create a new users.
